<resources>
    <string name="app_name">Paperback Harbor</string>
    <string name="j_k_rowling">J. K. Rowling</string>
    <string name="button">Authors List</string>
    <string name="content_description_media">This is a demo description</string>
    <string name="title">Atomic Habits: An Easy and Proven Way to Build Good Habits and Break Bad Ones</string>
    <string name="secondary_text">By James Clear</string>
    <string name="supporting_text">The #1 New York Times bestseller. Over 3 million copies sold!Tiny Changes, Remarkable ResultsNo matter your goals, Atomic Habits offers a proven framework for improving—every day. </string>
    <string name="action_1">Give Ratings</string>
    <string name="action_2">Add Reviews</string>
    <string name="content_title">Content Title</string>
    <string name="content_author_name">Author Name</string>
    <string name="content_text">Description</string>
    <string name="view_books">VIEW BOOKS</string>
    <string name="publish_content">PUBLISH CONTENT</string>
  <string name="app_name">paperback-harbor-app</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget</string>
    <string name="password">Password?</string>
    <string name="register_form">Registration</string>
    <string name="form">Form</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_no">Phone Number</string>
    <string name="register">Register</string>
    <string name="forget_password_guide">Enter Valid Username</string>
    <string name="submit">Submit</string>
    <string name="check_OTP">OTP</string>
    <string name="verify">Verification</string>
    <string name="verify_otp_description">Enter One Time Password Sent On Entered Mobile No</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="new_credentials">New</string>
    <string name="credential">Credentials</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rest_password_success_msg">Your Password has been updated successfully !!</string>
    <string name="password_updated">Password</string>
    <string name="update">Updated</string>
    <string name="author">Author</string>
    <string name="user">User</string>
    <string name="register_as">Register as</string>
    <string name="user_authenticate">User</string>
    <string name="authentication">Authentication</string>
    <string name="register_as_author">Register As Author</string>
    <string name="login_as">Login As</string>
    <string name="SearchIn">Account Type</string>
    <string name="forget_pwd">Forget password?</string>
</resources>