<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:padding="30dp"
    android:transitionName="transition_forget_password_check_otp"
    tools:context=".ForgetPasswordCheckOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/otp_verification_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/field_close_icon_foreground" />

        <TextView
            android:id="@+id/otp_verification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/check_OTP"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/otp_verification_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/verify"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/otp_verification_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/muli"
            android:text="@string/verify_otp_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.chaos.view.PinView
            android:id="@+id/forget_pwd_pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:cursorVisible="true"
            android:inputType="number"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="40dp"
            app:itemRadius="5dp"
            app:itemWidth="40dp"
            app:lineColor="@color/black" />

        <Button
            android:id="@+id/forget_pwd_verify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_circular_shape"
            android:onClick="callSetNewPassword"
            android:text="@string/verify_otp"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>